<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intent.ProfileActivity">

    <TextView
        android:id="@+id/textViewHeadingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_profile_heading_title"
        android:textColor="#039BE5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeadingTitle" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_email"
        app:layout_constraintEnd_toEndOf="@+id/textViewFullName"
        app:layout_constraintTop_toBottomOf="@+id/textViewFullName" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_password"
        app:layout_constraintEnd_toEndOf="@+id/textViewFullName"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewDataFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_data_full_name"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewFullName"
        app:layout_constraintTop_toTopOf="@+id/textViewFullName" />

    <TextView
        android:id="@+id/textViewDataEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_data_email"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail"
        app:layout_constraintTop_toTopOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewDataPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_data_password"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword"
        app:layout_constraintTop_toTopOf="@+id/textViewPassword" />

    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#F44336"
        android:text="@string/action_go_back"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>